--- a/.github/workflows/build-pre-release.yaml
+++ b/.github/workflows/build-pre-release.yaml
@@ -23,6 +23,11 @@ jobs:
         with:
           go-version: "1.20"
 
+      - name: Update go.mod
+        run: |
+          go get -u
+          go mod tidy
+
       - uses: actions/cache@v3
         with:
           path: |
